2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/24_passer_float_print.deca
// Description :
//     passer float a print   
// Resultats :
//    Valide 
//
// Historique :
// cree le 01/01/2024


{
    float  x = 1.3 ;
    print(x); 
}