2A/05_Projet_GL/src/test/deca/context/invalid/complet/60_selct_field_non_def.deca
// Description :
//   acces a un champ non def dans main 
// Resultats :
//    ligne 14 :   x identificateur non déclaré
// Historique :
//  cree le 16/01/2024

class A {

}

{
    A a ;
    a.x;
}